add cool jobs view

--- a/public/assets/css/style-responsive.css
+++ b/public/assets/css/style-responsive.css
@@ -9,9 +9,9 @@
 
 /* ExtraSmall devices (tablets, 767px and down) */
 @media (max-width: 767px) {
-	
+
 	.flexslider{ text-align:center;}
-	
+
 	#home .section-title h1 {
 		font-size: 33px;
 		line-height: 36px;
@@ -39,7 +39,7 @@
 	#slider_right {
 		right: 18px;
 	}
-	
+
 	.navbar .show-menu {
 		display: block;
 	}
@@ -91,9 +91,9 @@
 	#ajaxpage .section-title h1 {
 		font-size: 40px;
 	}
-	.mybutton.ultra a, 
+	.mybutton.ultra a,
 	.mybutton.ultra button,
-	.mybutton2.ultra a, 
+	.mybutton2.ultra a,
 	.mybutton2.ultra button{
 		font-size: 13px;
 		line-height: 40px;
@@ -124,11 +124,12 @@
 		border-right: solid 1px #eee;
 	}
 	.call-number {
-		font-size: 40px;
+		/*font-size: 40px;*/
+		font-size: 20px;
 		line-height: 65px;
 		font-weight: 600;
 	}
-	
+
 	.timeline-content #timeline .timeline-item, .timeline-content #timeline .timeline-item:nth-child(2n) {
 		clear: both;
 		float: none;
@@ -182,11 +183,11 @@
 		margin: 40px 0 0 0;
 		text-align:center;
 	}
-	
+
 	#map_canvas {
 		height: 350px;
 	}
-	
+
 }
 
 @media (max-width: 1024px) {
@@ -227,28 +228,28 @@
 	}
 	.project-description{ text-align:center;}
 	.navbar .nav > li > a{ padding:0 12px;}
-	
+
 	#home .section-title h1 {
 		font-size: 80px;
 		line-height:80px;
 		font-weight: 600;
 	}
-	
-	
+
+
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	
+
 	.flexslider{ text-align:left;}
-	
+
 	#home .section-title h1 {
 		font-size: 110px;
 		line-height: 100px;
 		letter-spacing:-3px;
 		font-weight: 400;
 	}
-	
+
 	.project-description{ text-align:inherit;}
 	.navbar .nav > li > a{ padding:0 15px;}
 	.mybutton a, .mybutton button {
@@ -290,7 +291,7 @@
 		-moz-transform-origin: 50% 0;
 		transform-origin: 50% 0;
 	}
-	
+
 	.mybutton2 a, .mybutton2 button {
 	overflow: hidden;
 	margin: 0 15px;
@@ -325,7 +326,7 @@
 		-moz-transform: translateX(0%);
 		transform: translateX(0%);
 	}
-	
+
 }
 
 /* Large devices (large desktops, 1200px and up) */
