--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -50,7 +50,7 @@ p.lead {
 
 h1, h2, h3, h4, h5, h6, .section-title, .form-group label {
 	color: #222;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway', sans-serif, 'STXihei', "WenQuanYi Micro Hei";
 }
 
 blockquote {
@@ -1123,7 +1123,8 @@ div.mc-image {
 	font-weight: 600;
 	color: #fff;
 	display: block;
-	font-size: 84px;
+	/*font-size: 84px;*/
+	font-size: 44px;
 }
 .call-number a {
 	color: #fff;
@@ -1652,7 +1653,7 @@ footer .social-icon a:hover {
 /*
  *! @ Custom Style
  */
-.media-heading a, .media-heading a:hover, .pager .puls li > a, .pager .puls li > a:hover, p.lead a, p.lead a:hover{
+.media-heading a, .media-heading a:hover, .pager .puls li > a, .pager .puls li > a:hover, p.lead a, p.lead a:hover, .service-items a, .service-items a:hover, .service-items h3, .service-items h3:hover{
 	-webkit-transition: all 0.2s ease-in-out;
 	-moz-transition: all 0.2s ease-in-out;
 	-o-transition: all 0.2s ease-in-out;
