update main css

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -909,6 +909,7 @@ div.mc-image {
 	top: 50%;
 	width: 11px;
 }
+
 .timeline-content #timeline .timeline-item:nth-child(2n) {
 	float: right;
 }
@@ -1658,30 +1659,49 @@ footer .social-icon a:hover {
 	position: relative;
 	display: inline-block;
 }
+
 /*
- *! @ Custom Style
- */
-.media-heading a, .media-heading a:hover, .pager .puls li > a, .pager .puls li > a:hover, p.lead a, p.lead a:hover, .service-items a, .service-items a:hover, .service-items h3, .service-items h3:hover, footer div.copyright a, footer div.copyright a:hover, .blog-title a, .blog-title a:hover, .section-title span a, .section-title span a:hover{
+|--------------------------------------------------------------------------
+| Transition Style
+|--------------------------------------------------------------------------
+|
+*/
+
+.media-heading a, .media-heading a:hover, .pager .puls li > a, .pager .puls li > a:hover, p.lead a, p.lead a:hover, .service-items a, .service-items a:hover, .service-items h3, .service-items h3:hover, footer div.copyright a, footer div.copyright a:hover, .blog-title a, .blog-title a:hover, .section-title span a, .section-title span a:hover {
 	-webkit-transition: all 0.2s ease-in-out;
 	-moz-transition: all 0.2s ease-in-out;
 	-o-transition: all 0.2s ease-in-out;
 	-ms-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 }
-.media-heading a{
+.media-heading a {
 	color: #000;
 }
 
-.media-heading a:hover{
+.media-heading a:hover {
 	color: #428bca;
 }
 
-p.lead a{
+p.lead a {
 	color: #7c7c7c;
 }
-p.lead a:hover{
+p.lead a:hover {
 	color: #0098f9;
 }
+
+.section-title span a {
+	color: #7C7C7C;
+}
+.section-title span a:hover {
+	color: #222;
+}
+
+/*
+|--------------------------------------------------------------------------
+| Footer Style
+|--------------------------------------------------------------------------
+|
+*/
 
 footer div.copyright a {
 	color:#898989;
@@ -1690,9 +1710,16 @@ footer div.copyright a:hover {
 	color:#333;
 }
 
-.section-title span a{
-	color: #7C7C7C;
+/*
+|--------------------------------------------------------------------------
+| Timeline Style
+|--------------------------------------------------------------------------
+|
+*/
+
+.timeline-item .post-body {
+	min-height: 250px;
 }
-.section-title span a:hover{
-	color: #222;
+.post-body .post-text{
+	text-align: left;
 }
