--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1,3 +1,12 @@
+/*
+ Title			: TimeFragment
+ Site			: http://www.timefragment.com/
+ Description	: Admin Style Sheet
+ Version		: 1.0
+ Author			: Ri Xu
+ Author URI		: http://xuri.me/
+ */
+
 /* @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700"); */
 
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
@@ -18,7 +27,7 @@ audio:not([controls]) {
 }
 
 html {
-	font-family: sans-serif;
+	font-family: 'Raleway','Microsoft YaHei', '微软雅黑', 'STXihei', '华文细黑', 'WenQuanYi Micro Hei', '黑体';
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
@@ -10694,7 +10703,7 @@ html,body {
 
 body {
 	padding-top: 51px;
-	font-family: "Open Sans";
+	font-family: 'Raleway', 'STXihei', '华文细黑', 'WenQuanYi Micro Hei', 'Microsoft YaHei', '微软雅黑', '黑体';
 	-webkit-overflow-scrolling: touch;
 }
 .admin-password{
@@ -10710,29 +10719,30 @@ body {
 	-webkit-transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
 	transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
 }
+
 /*
- *! @ Custom Style
- */
+|--------------------------------------------------------------------------
+| Custom Style
+|--------------------------------------------------------------------------
+|
+*/
+
 .btn-xs,
 .btn-group-xs > .btn {
-  padding: 1px 5px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
+	padding: 1px 5px;
+	font-size: 12px;
+	line-height: 1.5;
+	border-radius: 3px;
 }
-
 .navbar-btn.btn-xs {
-  margin-top: 14px;
-  margin-bottom: 14px;
+	margin-top: 14px;
+ 	margin-bottom: 14px;
+}
+.btn-xs .badge {
+	top: 0;
+	padding: 1px 5px;
 }
 
-.btn-xs .badge {
-  top: 0;
-  padding: 1px 5px;
-}
-/*
- *! Hide CKeditor About Icon
- */
 #cke_86{
 	display: none;
 }
