--- a/public/assets/css/isotope.css
+++ b/public/assets/css/isotope.css
@@ -1,4 +1,13 @@
-/**** Isotope Filtering ****/
+/*
+ Title			: TimeFragment
+ Site			: http://www.timefragment.com/
+ Description	: Isotop
+ Version		: 1.0
+ Author			: Ri Xu
+ Author URI		: http://xuri.me/
+ */
+
+/* Isotope Filtering */
 
 .isotope-item {
 	z-index: 2;
@@ -9,7 +18,7 @@
 	z-index: 1;
 }
 
-/**** Isotope CSS3 transitions ****/
+/* Isotope CSS3 transitions */
 
 .isotope, .isotope .isotope-item {
 	-webkit-transition-duration: 0.8s;
@@ -35,7 +44,7 @@
 	transition-property: transform, opacity;
 }
 
-/**** disabling Isotope CSS3 transitions ****/
+/* disabling Isotope CSS3 transitions */
 
 .isotope.no-transition, .isotope.no-transition .isotope-item, .isotope .isotope-item.no-transition {
 	-webkit-transition-duration: 0s;
