add {{-- Analitycs code --}}

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1731,3 +1731,8 @@ footer div.copyright a:hover {
 .post-body .post-text{
 	text-align: left;
 }
+
+/* Hide Analitycs Code */
+span#cnzz_stat_icon_1252933521 {
+	display: none;
+}
