integration alipay dualfun

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1801,7 +1801,7 @@ legend {
 label {
 	display: inline-block;
 	margin-bottom: 5px;
-	font-weight: bold;
+	/*font-weight: bold;*/
 }
 
 input[type="search"] {
