--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -9846,11 +9846,11 @@ html,body {
 
 @media (min-width: 1000px) {
 	.pushy-left {
-		-webkit-transform: none !important;
-		-moz-transform: none !important;
-		-o-transform: none !important;
-		transform: none !important;
-		-ms-transform: none !important;
+		-webkit-transform: none;
+		-moz-transform: none;
+		-o-transform: none;
+		transform: none;
+		-ms-transform: none;
 	}
 }
 
